fixed spacing

--- a/app/stylesheets/utils/_globals.scss
+++ b/app/stylesheets/utils/_globals.scss
@@ -9,7 +9,6 @@
 	width: 100%;
 }
 .cards-wrapper {
-	margin: 60px 0;
 	display: flex;
 	flex-flow: row wrap;
 	width: 100%;
